--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,15 @@
+
+
+header {
+    background-color: #2c3e50;
+    color: white;
+    padding: 20px;
+    text-align: center;
+}
+header h1 {
+    margin: 0;
+    font-size: 2.5em;
+}
 body {
     font-family: Arial, sans-serif;
     margin: 0;
