--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -80,12 +80,21 @@ footer {
 }
 
 .highlight-box {
+    width: 100%;
+    max-width: 1000px;
+    margin: 40px auto;
+    padding: 20px;
     background-color: #dbeeff;
     border-left: 6px solid #3498db;
-    padding: 20px;
-    margin: 40px auto;
     border-radius: 8px;
-    max-width: 700px;
+    box-sizing: border-box;
+}
+.media-item {
+    width: 100%;
+    max-width: 220px;
+    height: auto;
+    border-radius: 8px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
 }
 
 .video-row {
